--- a/ClockWork/client/scss/ionic.css
+++ b/ClockWork/client/scss/ionic.css
@@ -10,57 +10,48 @@ $assertive:                       #ef4e3a !default;
 $royal:                           #8a6de9 !default;
 $dark:                            #444 !default;
 */
-ion-nav-view.view-container .pane {
-  background-color: #054357;
-  color: white; }
-  ion-nav-view.view-container .pane h3 {
-    color: white; }
-  ion-nav-view.view-container .pane ion-list .list .item {
-    background-color: #054357; }
-    ion-nav-view.view-container .pane ion-list .list .item .icon {
-      color: white; }
-    ion-nav-view.view-container .pane ion-list .list .item input {
-      color: white; }
-    ion-nav-view.view-container .pane ion-list .list .item input::-webkit-input-placeholder {
-      color: white; }
-  ion-nav-view.view-container .pane ion-list .list .item:hover {
-    background-color: #fc5a22; }
-  ion-nav-view.view-container .pane ion-list ion-item.item-complex .item-content {
-    background-color: #054357;
-    color: white; }
-    ion-nav-view.view-container .pane ion-list ion-item.item-complex .item-content h2.ng-binding {
-      color: white; }
-    ion-nav-view.view-container .pane ion-list ion-item.item-complex .item-content h3.ng-binding {
-      color: white; }
-  ion-nav-view.view-container .pane ion-list ion-item.item-complex .item-content:hover {
-    background-color: #fc5a22; }
+ion-side-menu-content ion-nav-bar ion-header-bar.bar.bar-dark {
+  border-color: #f44336; }
+ion-side-menu-content ion-nav-view ion-view.pane {
+  background-color: #dddddd; }
+  ion-side-menu-content ion-nav-view ion-view.pane ion-content ion-list ion-item.item-complex .item-content {
+    height: 150px; }
 
+ion-side-menu ion-header-bar.bar {
+  background-color: #2E3C54;
+  border-color: #1B2432;
+  border-bottom-width: 0px; }
+  ion-side-menu ion-header-bar.bar h1 {
+    color: white; }
 ion-side-menu ion-content {
-  background-color: #054357; }
+  background-color: #1B2432; }
   ion-side-menu ion-content .list .item {
-    background-color: #054357; }
+    background-color: #2E3C54;
+    border-color: #1B2432;
+    color: white; }
+  ion-side-menu ion-content .list .item:active {
+    background-color: #FF5964; }
   ion-side-menu ion-content .list .item:hover {
-    background-color: #fc5a22; }
+    background-color: #FF5964; }
 
 ion-modal-view ion-content {
-  background-color: #054357; }
+  background-color: #EEEEEE; }
   ion-modal-view ion-content form label.item-input {
-    background-color: #054357;
-    background-color: #054357; }
+    background-color: #EEEEEE; }
     ion-modal-view ion-content form label.item-input div {
-      color: white; }
+      color: black; }
     ion-modal-view ion-content form label.item-input input {
-      color: white; }
+      color: black; }
     ion-modal-view ion-content form label.item-input input::-webkit-input-placeholder {
-      color: white; }
+      color: black; }
     ion-modal-view ion-content form label.item-input textarea {
-      background-color: #054357;
-      color: white; }
+      background-color: #EEEEEE;
+      color: black; }
     ion-modal-view ion-content form label.item-input textarea::-webkit-input-placeholder {
-      color: white; }
+      color: black; }
     ion-modal-view ion-content form label.item-input select {
-      background-color: #054357;
-      color: white; }
+      background-color: #EEEEEE;
+      color: black; }
   ion-modal-view ion-content form label.item-input:hover {
     background-color: #fc5a22; }
     ion-modal-view ion-content form label.item-input:hover textarea:hover {
@@ -4037,7 +4028,7 @@ a.subdued {
       background-image: linear-gradient(180deg, #6b46e5, #6b46e5 50%, transparent 50%); }
   .bar.bar-dark {
     border-color: #111;
-    background-color: #cd2027;
+    background-color: #f44336;
     background-image: linear-gradient(0deg, #111, #111 50%, transparent 50%);
     color: #fff; }
     .bar.bar-dark .title {
@@ -4295,7 +4286,7 @@ a.subdued {
 
 .bar-dark .button {
   border-color: transparent;
-  background-color: #cd2027;
+  background-color: #f44336;
   color: #fff; }
   .bar-dark .button:hover {
     color: #fff;
@@ -4502,13 +4493,13 @@ a.subdued {
 .tabs-dark > .tabs,
 .tabs.tabs-dark {
   border-color: #111;
-  background-color: #cd2027;
+  background-color: #F44336;
   background-image: linear-gradient(0deg, #111, #111 50%, transparent 50%);
   color: #fff; }
   .tabs-dark > .tabs .tab-item .badge,
   .tabs.tabs-dark .tab-item .badge {
     background-color: #fff;
-    color: #cd2027; }
+    color: #F44336; }
 
 .tabs-striped .tabs {
   background-color: white;
@@ -4520,38 +4511,38 @@ a.subdued {
   margin-top: -2px;
   border-style: solid;
   border-width: 2px 0 0 0;
-  border-color: #cd2027; }
+  border-color: #F44336; }
   .tabs-striped .tab-item.tab-item-active .badge, .tabs-striped .tab-item.active .badge, .tabs-striped .tab-item.activated .badge {
     top: 2px;
     opacity: 1; }
 .tabs-striped.tabs-light .tabs {
   background-color: #fff; }
 .tabs-striped.tabs-light .tab-item {
-  color: rgba(205, 32, 39, 0.4);
+  color: rgba(244, 67, 54, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-light .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-light .tab-item.tab-item-active, .tabs-striped.tabs-light .tab-item.active, .tabs-striped.tabs-light .tab-item.activated {
     margin-top: -2px;
-    color: #cd2027;
+    color: #F44336;
     border-style: solid;
     border-width: 2px 0 0 0;
-    border-color: #cd2027; }
+    border-color: #F44336; }
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-stable .tabs {
   background-color: #f8f8f8; }
 .tabs-striped.tabs-stable .tab-item {
-  color: rgba(205, 32, 39, 0.4);
+  color: rgba(244, 67, 54, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-stable .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-stable .tab-item.tab-item-active, .tabs-striped.tabs-stable .tab-item.active, .tabs-striped.tabs-stable .tab-item.activated {
     margin-top: -2px;
-    color: #cd2027;
+    color: #F44336;
     border-style: solid;
     border-width: 2px 0 0 0;
-    border-color: #cd2027; }
+    border-color: #F44336; }
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-positive .tabs {
@@ -4645,7 +4636,7 @@ a.subdued {
 .tabs-striped.tabs-top .tab-item.tab-item-active .badge, .tabs-striped.tabs-top .tab-item.active .badge, .tabs-striped.tabs-top .tab-item.activated .badge {
   top: 4%; }
 .tabs-striped.tabs-dark .tabs {
-  background-color: #cd2027; }
+  background-color: #F44336; }
 .tabs-striped.tabs-dark .tab-item {
   color: rgba(255, 255, 255, 0.4);
   opacity: 1; }
@@ -4684,7 +4675,7 @@ a.subdued {
   background-color: #886aea;
   background-image: none; }
 .tabs-striped.tabs-background-dark .tabs {
-  background-color: #cd2027;
+  background-color: #F44336;
   background-image: none; }
 .tabs-striped.tabs-color-light .tab-item {
   color: rgba(255, 255, 255, 0.4);
@@ -4791,14 +4782,14 @@ a.subdued {
       top: 2px;
       opacity: 1; }
 .tabs-striped.tabs-color-dark .tab-item {
-  color: rgba(205, 32, 39, 0.4);
+  color: rgba(244, 67, 54, 0.4);
   opacity: 1; }
   .tabs-striped.tabs-color-dark .tab-item .badge {
     opacity: 0.4; }
   .tabs-striped.tabs-color-dark .tab-item.tab-item-active, .tabs-striped.tabs-color-dark .tab-item.active, .tabs-striped.tabs-color-dark .tab-item.activated {
     margin-top: -2px;
-    color: #cd2027;
-    border: 0 solid #cd2027;
+    color: #F44336;
+    border: 0 solid #F44336;
     border-top-width: 2px; }
     .tabs-striped.tabs-color-dark .tab-item.tab-item-active .badge, .tabs-striped.tabs-color-dark .tab-item.active .badge, .tabs-striped.tabs-color-dark .tab-item.activated .badge {
       top: 2px;
@@ -4845,7 +4836,7 @@ a.subdued {
   border-color: #6b46e5; }
 
 .tabs-background-dark .tabs, .tabs-background-dark > .tabs {
-  background-color: #cd2027;
+  background-color: #F44336;
   background-image: linear-gradient(0deg, #111, #111 50%, transparent 50%);
   border-color: #111; }
 
@@ -4938,52 +4929,52 @@ a.subdued {
       opacity: 1; }
 
 .tabs-color-dark .tab-item {
-  color: rgba(205, 32, 39, 0.4);
+  color: rgba(244, 67, 54, 0.4);
   opacity: 1; }
   .tabs-color-dark .tab-item .badge {
     opacity: 0.4; }
   .tabs-color-dark .tab-item.tab-item-active, .tabs-color-dark .tab-item.active, .tabs-color-dark .tab-item.activated {
-    color: #cd2027;
-    border: 0 solid #cd2027; }
+    color: #F44336;
+    border: 0 solid #F44336; }
     .tabs-color-dark .tab-item.tab-item-active .badge, .tabs-color-dark .tab-item.active .badge, .tabs-color-dark .tab-item.activated .badge {
       opacity: 1; }
 
 ion-tabs.tabs-color-active-light .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-light .tab-item.tab-item-active, ion-tabs.tabs-color-active-light .tab-item.active, ion-tabs.tabs-color-active-light .tab-item.activated {
     color: #fff; }
 ion-tabs.tabs-color-active-stable .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-stable .tab-item.tab-item-active, ion-tabs.tabs-color-active-stable .tab-item.active, ion-tabs.tabs-color-active-stable .tab-item.activated {
     color: #f8f8f8; }
 ion-tabs.tabs-color-active-positive .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-color-active-positive .tab-item.active, ion-tabs.tabs-color-active-positive .tab-item.activated {
     color: #387ef5; }
 ion-tabs.tabs-color-active-calm .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-calm .tab-item.tab-item-active, ion-tabs.tabs-color-active-calm .tab-item.active, ion-tabs.tabs-color-active-calm .tab-item.activated {
     color: #11c1f3; }
 ion-tabs.tabs-color-active-assertive .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-assertive .tab-item.tab-item-active, ion-tabs.tabs-color-active-assertive .tab-item.active, ion-tabs.tabs-color-active-assertive .tab-item.activated {
     color: #ef473a; }
 ion-tabs.tabs-color-active-balanced .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-balanced .tab-item.tab-item-active, ion-tabs.tabs-color-active-balanced .tab-item.active, ion-tabs.tabs-color-active-balanced .tab-item.activated {
     color: #33cd5f; }
 ion-tabs.tabs-color-active-energized .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-energized .tab-item.tab-item-active, ion-tabs.tabs-color-active-energized .tab-item.active, ion-tabs.tabs-color-active-energized .tab-item.activated {
     color: #ffc900; }
 ion-tabs.tabs-color-active-royal .tab-item {
-  color: #cd2027; }
+  color: #F44336; }
   ion-tabs.tabs-color-active-royal .tab-item.tab-item-active, ion-tabs.tabs-color-active-royal .tab-item.active, ion-tabs.tabs-color-active-royal .tab-item.activated {
     color: #886aea; }
 ion-tabs.tabs-color-active-dark .tab-item {
   color: #fff; }
   ion-tabs.tabs-color-active-dark .tab-item.tab-item-active, ion-tabs.tabs-color-active-dark .tab-item.active, ion-tabs.tabs-color-active-dark .tab-item.activated {
-    color: #cd2027; }
+    color: #F44336; }
 
 .tabs-top.tabs-striped {
   padding-bottom: 0; }
@@ -5165,7 +5156,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
   .tab-item.tab-item-active.tab-item-dark,
   .tab-item.active.tab-item-dark,
   .tab-item.activated.tab-item-dark {
-    color: #cd2027; }
+    color: #F44336; }
 
 .item.tabs {
   display: -webkit-box;
@@ -5708,7 +5699,7 @@ ion-tabs.tabs-color-active-dark .tab-item {
     color: #fff; }
   .item.item-dark {
     border-color: #111;
-    background-color: #cd2027;
+    background-color: #F44336;
     color: #fff; }
   .item[ng-click]:hover {
     cursor: pointer; }
@@ -6045,7 +6036,7 @@ a.item-content {
       background-color: #6b46e5; }
 .item-complex.item-dark > .item-content {
   border-color: #111;
-  background-color: #cd2027;
+  background-color: #F44336;
   color: #fff; }
   .item-complex.item-dark > .item-content.active, .item-complex.item-dark > .item-content:active {
     border-color: #000;
@@ -6474,7 +6465,7 @@ button.item.item-button-right {
       transform: translate3d(0, 0, 0); }
 
 .item-reorder .button.icon {
-  color: #cd2027;
+  color: #F44336;
   font-size: 32px; }
 
 .item-reordering {
@@ -6674,7 +6665,7 @@ button.item.item-button-right {
   color: #fff; }
 .tabs .tab-item .badge.badge-dark,
 .badge.badge-dark {
-  background-color: #cd2027;
+  background-color: #F44336;
   color: #fff; }
 
 .button .badge {
@@ -7339,8 +7330,8 @@ ion-slides {
  * --------------------------------------------------
  */
 .spinner {
-  stroke: #cd2027;
-  fill: #cd2027; }
+  stroke: #F44336;
+  fill: #F44336; }
   .spinner svg {
     width: 28px;
     height: 28px; }
@@ -7369,8 +7360,8 @@ ion-slides {
     stroke: #886aea;
     fill: #886aea; }
   .spinner.spinner-dark {
-    stroke: #cd2027;
-    fill: #cd2027; }
+    stroke: #F44336;
+    fill: #F44336; }
 
 .spinner-android {
   stroke: #4b8bf4; }
@@ -7383,7 +7374,7 @@ ion-slides {
   stop-color: #fff;
   stop-opacity: 0; }
 .spinner-spiral.spinner-light .stop1 {
-  stop-color: #cd2027; }
+  stop-color: #F44336; }
 .spinner-spiral.spinner-light .stop2 {
   stop-color: #fff; }
 .spinner-spiral.spinner-stable .stop2 {
@@ -7401,7 +7392,7 @@ ion-slides {
 .spinner-spiral.spinner-royal .stop2 {
   stop-color: #886aea; }
 .spinner-spiral.spinner-dark .stop2 {
-  stop-color: #cd2027; }
+  stop-color: #F44336; }
 
 /**
  * Forms
@@ -7416,7 +7407,7 @@ legend {
   padding: 0;
   width: 100%;
   border: 1px solid #ddd;
-  color: #cd2027;
+  color: #F44336;
   font-size: 21px;
   line-height: 2.85714; }
   legend small {
@@ -7552,7 +7543,7 @@ textarea {
   padding: 7px 10px 7px 0px;
   max-width: 200px;
   width: 35%;
-  color: #cd2027;
+  color: #F44336;
   font-size: 16px; }
 
 .placeholder-icon {
@@ -7651,11 +7642,11 @@ input[type="color"] {
 textarea {
   padding-left: 0; }
   textarea::-moz-placeholder {
-    color: #f6c3c5; }
+    color: #fff8f7; }
   textarea:-ms-input-placeholder {
-    color: #f6c3c5; }
+    color: #fff8f7; }
   textarea::-webkit-input-placeholder {
-    color: #f6c3c5;
+    color: #fff8f7;
     text-indent: -3px; }
 
 textarea {
@@ -7704,13 +7695,13 @@ input[type="file"] {
 
 input::-moz-placeholder,
 textarea::-moz-placeholder {
-  color: #f6c3c5; }
+  color: #fff8f7; }
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
-  color: #f6c3c5; }
+  color: #fff8f7; }
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-  color: #f6c3c5;
+  color: #fff8f7;
   text-indent: 0; }
 
 input[disabled],
@@ -7792,10 +7783,10 @@ input[type="checkbox"][readonly] {
   border-color: #886aea; }
 
 .checkbox-dark input:before, .checkbox-dark .checkbox-icon:before {
-  border-color: #cd2027; }
+  border-color: #F44336; }
 .checkbox-dark input:checked:before, .checkbox-dark input:checked + .checkbox-icon:before {
-  background: #cd2027;
-  border-color: #cd2027; }
+  background: #F44336;
+  border-color: #F44336; }
 
 .checkbox input:disabled:before,
 .checkbox input:disabled + .checkbox-icon:before {
@@ -7958,8 +7949,8 @@ input:checked + .checkbox-icon:after {
   border-color: #886aea;
   background-color: #886aea; }
 .toggle.toggle-dark input:checked + .track {
-  border-color: #cd2027;
-  background-color: #cd2027; }
+  border-color: #F44336;
+  background-color: #F44336; }
 
 .toggle input {
   display: none; }
@@ -8087,9 +8078,9 @@ input:checked + .checkbox-icon:after {
 .toggle-small .toggle-royal input:checked + .track .handle {
   background-color: #886aea; }
 .toggle-small .toggle-dark input:checked + .track {
-  background-color: rgba(205, 32, 39, 0.5); }
+  background-color: rgba(244, 67, 54, 0.5); }
 .toggle-small .toggle-dark input:checked + .track .handle {
-  background-color: #cd2027; }
+  background-color: #F44336; }
 
 /**
  * Radio Button Inputs
@@ -8190,7 +8181,7 @@ input:checked + .checkbox-icon:after {
     left: -2001px;
     width: 2000px;
     height: 2px;
-    background: #cd2027;
+    background: #F44336;
     content: ' '; }
   .range input::-webkit-slider-thumb:after {
     /* create a larger (but hidden) hit area */
@@ -8201,7 +8192,7 @@ input:checked + .checkbox-icon:after {
     content: ' '; }
   .range input::-ms-fill-lower {
     height: 2px;
-    background: #cd2027; }
+    background: #F44336; }
 
 .range {
   display: -webkit-box;
@@ -8249,9 +8240,9 @@ input:checked + .checkbox-icon:after {
   .range.range-royal input::-ms-fill-lower {
     background: #886aea; }
   .range.range-dark input::-webkit-slider-thumb:before {
-    background: #cd2027; }
+    background: #F44336; }
   .range.range-dark input::-ms-fill-lower {
-    background: #cd2027; }
+    background: #F44336; }
 
 .range .icon {
   -webkit-box-flex: 0;
@@ -8377,7 +8368,7 @@ input:checked + .checkbox-icon:after {
   .item-select.item-royal:after, .item-select.item-royal .input-label {
     color: #fff; }
   .item-select.item-dark select {
-    background: #cd2027;
+    background: #F44336;
     color: #fff; }
   .item-select.item-dark:after, .item-select.item-dark .input-label {
     color: #fff; }
@@ -8652,7 +8643,7 @@ progress {
         color: #fff; }
   .button.button-dark {
     border-color: transparent;
-    background-color: #cd2027;
+    background-color: #F44336;
     color: #fff; }
     .button.button-dark:hover {
       color: #fff;
@@ -8663,16 +8654,16 @@ progress {
       border-color: transparent;
       background: none;
       box-shadow: none;
-      color: #cd2027; }
+      color: #F44336; }
     .button.button-dark.button-icon {
       border-color: transparent;
       background: none; }
     .button.button-dark.button-outline {
-      border-color: #cd2027;
+      border-color: #F44336;
       background: transparent;
-      color: #cd2027; }
+      color: #F44336; }
       .button.button-dark.button-outline.active, .button.button-dark.button-outline.activated {
-        background-color: #cd2027;
+        background-color: #F44336;
         box-shadow: none;
         color: #fff; }
 
@@ -9375,10 +9366,10 @@ a.button {
   border-color: #6b46e5; }
 
 .dark, a.dark {
-  color: #cd2027; }
+  color: #F44336; }
 
 .dark-bg {
-  background-color: #cd2027; }
+  background-color: #F44336; }
 
 .dark-border {
   border-color: #111; }
