Updated go to profile ctrl and templates

--- a/ClockWork/client/templates/contact.html
+++ b/ClockWork/client/templates/contact.html
@@ -2,10 +2,13 @@
     <ion-content>
         <div class="list">
             <div class="item">
-                @IonicFramework
+                @kidculli
             </div>
             <div class="item">
-                @DriftyTeam
+                @sunmaximus
+            </div>
+            <div class="item">
+                @andrylr
             </div>
         </div>
     </ion-content>
