--- a/ClockWork/client/templates/about.html
+++ b/ClockWork/client/templates/about.html
@@ -1,10 +1,10 @@
 <ion-view view-title="About">
     <ion-content class="padding">
-        <h3>Create hybrid mobile apps with the web technologies you love.</h3>
-        <p>Free and open source, Ionic offers a library of mobile-optimized HTML, CSS and JS components for building highly interactive apps.</p>
-        <p>Built with Sass and optimized for AngularJS.</p>
-        <p>
-            <a class="button icon icon-right ion-chevron-right" href="#/tab/navstack">Tabs Nav Stack</a>
-        </p>
+        <h3>Welcome to ClockWork!</h3>
+        <p>ClockWork is a social time management application which allows you to quickly and easily organize a date with
+        your friends. Simply create an event by providing details and a time limit for friends to respond. </p>
+        <!--<p>-->
+            <!--<a class="button icon icon-right ion-chevron-right" href="#/tab/navstack">Tabs Nav Stack</a>-->
+        <!--</p>-->
     </ion-content>
 </ion-view>
